--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@
 
   &:hover {
     background-color: transparent;
-    box-shadow: 2px 2px 2px 1px;;
+    box-shadow: 3px 3px 3px 0 rgba(0, 0, 0, 0.3);;
   }
 
   &:disabled {
